--- a/argocd/app-test-1/app-test-1.yaml
+++ b/argocd/app-test-1/app-test-1.yaml
@@ -57,6 +57,10 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     # cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
+  tls:
+  - hosts:
+      - gre4ka.fun
+    secretName: coffee-secret-tls
   ingressClassName: nginx
   rules:
   - host: gre4ka.fun
