--- a/argocd/app-test-1/app-test-1.yaml
+++ b/argocd/app-test-1/app-test-1.yaml
@@ -1,59 +1,59 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: app-test-1
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
-  namespace: app-test-1
+  name: my-web-app
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: app
+      app: my-web-app
   template:
     metadata:
       labels:
-        app: app
+        app: my-web-app
     spec:
       containers:
-      - name: app
-        image: nginx
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+      - name: my-web-app
+        # image: da1ly/web:1.2
+        image: da1ly/web:2.1.2
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-test-1
-  namespace: app-test-1
-  labels:
-    app: app-test-1
+  name: my-web-app
 spec:
   type: ClusterIP
+  selector:
+    app: my-web-app
   ports:
-  - name: http
+  - protocol: TCP
     port: 80
     targetPort: 80
-    protocol: TCP
-  selector:
-    app: app-test-1
+
 ---
 
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-test-1-ingress
+  name: hello-world-ingress
   annotations:
     nginx.ingress.kubernetes.io/proxy-redirect-from: http://
     nginx.ingress.kubernetes.io/proxy-redirect-to: https://
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
+    nginx.ingress.kubernetes.io/server-snippet: |
+      gzip on;
+      gzip_disable "msie6";
+      gzip_comp_level 5;
+      gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     cert-manager.io/cluster-issuer: letsencrypt-prod
     # cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
@@ -70,6 +70,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app-test-1
+            name: my-web-app
             port:
               number: 80
