--- a/argocd/app-test-1/app-test-1.yaml
+++ b/argocd/app-test-1/app-test-1.yaml
@@ -1,7 +1,14 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: app-test-1
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-web-app
+  namespace: app-test-1
 spec:
   replicas: 1
   selector:
@@ -30,6 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-web-app
+  namespace: app-test-1
 spec:
   type: ClusterIP
   selector:
@@ -45,6 +53,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-world-ingress
+  namespace: app-test-1
   annotations:
     nginx.ingress.kubernetes.io/proxy-redirect-from: http://
     nginx.ingress.kubernetes.io/proxy-redirect-to: https://
