--- a/.github/workflows/ci2.yaml
+++ b/.github/workflows/ci2.yaml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   build:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
@@ -26,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: user/app
+          images: ${{ secrets.DOCKER_USERNAME }}/app
           tags: |
             latest
             sha-${{ github.sha }}
