--- a/.github/workflows/ci2.yaml
+++ b/.github/workflows/ci2.yaml
@@ -28,8 +28,14 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/app
-          tags: latest
-          labels: latest
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+      
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
