--- a/.github/workflows/ci2.yaml
+++ b/.github/workflows/ci2.yaml
@@ -29,6 +29,7 @@ jobs:
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/app
           tags: |
+            latest
             type=sha
       
       - name: Build and push
