--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Update ArgoCD manifest
+        run: |
+          IMAGE_TAG=${{ steps.meta.outputs.tags }}
+          sed -i "s|image: da1ly/porfolio:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${IMAGE_TAG}|" argocd/app-test-1/app-test-1.yaml
+  
       - name: Commit and push ArgoCD manifest update
         run: |
           git config --global user.name "github-actions"
