fix Update ArgoCD manifest ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Update ArgoCD manifest
         run: |
           IMAGE_TAG=${{ steps.meta.outputs.tags }}
-          sed -i "s|image: da1ly/porfolio:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${IMAGE_TAG}|" argocd/app-test-1/app-test-1.yaml
+          sed -i "s|image: da1ly/porfolio:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:latest|" argocd/app-test-1/app-test-1.yaml
   
       - name: Commit and push ArgoCD manifest update
         run: |
