--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,8 +45,9 @@ jobs:
       - name: Update ArgoCD manifest
         run: |
           ls -al
-          IMAGE_TAG=${{ steps.meta.outputs.tags }}
-          sed -i 's|image: da1ly/porfolio:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:latest|' argocd/app-test-1/app-test-1.yaml
+          cd argocd/app-test-1/
+          ls -al
+          sed -i 's|image: da1ly/porfolio:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:latest|' app-test-1.yaml
   
       - name: Commit and push ArgoCD manifest update
         run: |
