--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
   
       - name: Commit and push ArgoCD manifest update
         run: |
-          ls -al
+          cd argocd/app-test-1/
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add app-test-1.yaml
