fix Update ArgoCD manifest ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - ci-cd
+      - main
 jobs:
   build:
     name: Push Docker image to Docker Hub
