--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,6 +54,6 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add app-test-1.yaml
           git commit -m "Update ArgoCD manifest with new Docker image tag"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Gre4kas/project-kubernetes-learning-.git HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
