--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Update ArgoCD manifest
         run: |
           cd manifest/app-test-1
-          sed -i 's|image: da1ly/porfolio:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${{ steps.meta.outputs.tags }}|' app-test-1.yaml
+          sed -i 's|image: da1ly/app:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${{ steps.meta.outputs.tags }}|' app-test-1.yaml
   
       - name: Commit and push ArgoCD manifest update
         run: |
