--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,7 +46,7 @@ jobs:
         run: |
           cd manifest/app-test-1
           IMAGE_TAG=$(echo ${{ steps.meta.outputs.tags }} | cut -d',' -f2)
-          sed -i "s|image: da1ly/app:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${IMAGE_TAG}|" app-test-1.yaml
+          sed -i "s|image: da1ly/app:.*|image: ${IMAGE_TAG}|" app-test-1.yaml
   
       - name: Commit and push ArgoCD manifest update
         run: |
