test Fix 5 ci.yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Update ArgoCD manifest
         run: |
           cd manifest/app-test-1
-          IMAGE_TAG=$(echo ${{ steps.meta.outputs.tags }} | cut -d',' -f3)
+          IMAGE_TAG=$(echo ${{ steps.meta.outputs.tags }} | tr ',' '\n' | grep 'sha-')
           sed -i "s|image: da1ly/app:.*|image: ${IMAGE_TAG}|" app-test-1.yaml
   
       - name: Commit and push ArgoCD manifest update
