--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,8 +46,11 @@ jobs:
         run: |
           cd manifest/app-test-1
           IMAGE_TAG=$(echo ${{ steps.meta.outputs.tags }} | tr ',' '\n' | grep 'sha-')
-          sed -i "s|image: da1ly/app:.*|image: ${IMAGE_TAG}|" app-test-1.yaml
-  
+          sed -i "s|image: da1ly/app:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${IMAGE_TAG}|" app-test-1.yaml
+
+      - name: Display ArgoCD manifest after update
+        run: cat manifest/app-test-1/app-test-1.yaml
+
       - name: Commit and push ArgoCD manifest update
         run: |
           cd manifest/app-test-1
