test Fix 12 ci.yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,11 +44,9 @@ jobs:
 
       - name: Update ArgoCD manifest
         run: |
-          ls
           cd manifest/app-test-1
-          ls
-          IMAGE_TAG=$(echo ${{ steps.meta.outputs.tags }} | cut -d',' -f1)
-          sed -i "s|image: da1ly/app:.*|image: ${IMAGE_TAG}|" app-test-1.yaml
+          IMAGE_TAG=$(echo ${{ steps.meta.outputs.tags }} | tr ',' '\n' | grep 'sha-')
+          sed -i "s|image: da1ly/app:.*|image: ${{ secrets.DOCKER_USERNAME }}/app:${IMAGE_TAG}|" app-test-1.yaml
 
       - name: Display ArgoCD manifest after update
         run: cat manifest/app-test-1/app-test-1.yaml
