--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
+      - ci-cd
 jobs:
   build:
     name: Push Docker image to Docker Hub
@@ -45,18 +45,18 @@ jobs:
       - name: Update ArgoCD manifest
         run: |
           ls -l
-          cd manifest/app-test-1
+          cd kubernetes/manifest/app-test-1
           ls -l
           IMAGE_TAG=$(echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n' | grep 'sha-')
           echo "Extracted IMAGE_TAG: ${IMAGE_TAG}"
           sed -i "s|image: da1ly/app:.*|image: ${IMAGE_TAG}|" app-test-1.yaml
 
       - name: Display ArgoCD manifest after update
-        run: cat manifest/app-test-1/app-test-1.yaml
+        run: cat kubernetes/manifest/app-test-1/app-test-1.yaml
   
       - name: Commit and push ArgoCD manifest update
         run: |
-          cd manifest/app-test-1
+          cd kubernetes/manifest/app-test-1
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add app-test-1.yaml
