--- a/kubernetes/manifest_grafana/grafana_ingress.yaml
+++ b/kubernetes/manifest_grafana/grafana_ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-world-ingress
+  namespace: monitoring
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     # cert-manager.io/cluster-issuer: letsencrypt-staging
@@ -19,6 +20,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: prometheus-grafana
+            name: grafana
             port:
               number: 80
